# dysmalpy

./: .converagerc  .coveragerc  .gitignore  .rtd-environment.yml  .travis.yml  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: .gitignore  Makefile  acknowledging_and_referencing.rst  api.rst  bug_report_template.rst  bugfix_instructions.rst  conf.py  dysmalpy_example_fit_1D.ipynb  dysmalpy_example_fit_2D.ipynb  dysmalpy_example_fitting_wrapper_1D.ipynb  dysmalpy_example_fitting_wrapper_2D.ipynb  dysmalpy_example_fitting_wrapper_3D.ipynb  dysmalpy_example_model.ipynb  dysmalpy_example_model_wrapper.ipynb  dysmalpy_quickstart_example.ipynb  dysmalpy_quickstart_example.py  examples_downloads.rst  how_to_build_and_deploy_documentation.rst  index.rst  installation.rst  installation_anaconda.rst  installation_anaconda_long_dep_expl.rst  link_to_license.rst  mailing_list.rst  make.bat  overview_code_structure.rst  workflow_on_how_to_contribute.rst
docs/_static/: dysmalpy_quickstart_example.py
docs/_templates/: footer.html
docs/dysmalpy/: index.rst
docs/tutorials/: aperture_drawing.rst  dysmalpy_quickstart_example.rst
dysmalpy/: __init__.py  aperture_classes.py  check_build.py  config.py  cutils.html  cutils.pyx  cutils_py.py  data.py  data_classes.py  data_io.py  dysmalpy.py  dysmalpy_old.py  exceptions.py  fitting.py  galaxy.py  instrument.py  lensing.py  models.py  observation.py  parameters.py  plotting.py  pyqt_dysmalpy_gui.py  test_gal.pickle  test_new.fits  test_populate_cube_python.py  utils.py  utils_io.py  utils_least_chi_squares_1d_fitter.py
dysmalpy/fitting/: __init__.py  base.py  mcmc.py  mpfit.py  nested_sampling.py  utils.py
dysmalpy/fitting_wrappers/: __init__.py  data_io.py  dysmalpy_fit_single.py  dysmalpy_fit_single_1D.py  dysmalpy_fit_single_2D.py  dysmalpy_fit_single_3D.py  dysmalpy_make_model.py  plotting.py  setup_gal_models.py  tied_functions.py  tkinter_io.py  utils_calcs.py  utils_io.py
dysmalpy/lensing_transformer/: README_lensing_transformer.md  main.cpp  main.py  (+2 more)
examples/: dysmalpy_example_model.ipynb
fitting_wrappers/: dysmalpy_fit_single_1D.py  dysmalpy_fit_single_2D.py  dysmalpy_fit_single_3D.py  gather_catalog.py  plotting.py  utils_io.py
licenses/: LICENSE.rst
test_nbs/: dysmalpy_dekel_zhao.ipynb  dysmalpy_ellip_psf.ipynb  dysmalpy_sep_light.ipynb  dysmalpy_sep_light_fit_debug.ipynb  dysmalpy_sep_light_with_PSF.ipynb
tests/: debugging_dpy_dynesty.ipynb  test_fitting.py  test_fitting_DEBUG_TMP.py  test_fitting_with_lensing.py  test_lensing.py  test_models.py  test_utils_least_chi_squares_1d_fitter.py
(+2407 files in other folders)
