[metadata]
name = dysmalpy
description = 'A modelling and fitting package for galaxy kinematics.'
long_description = readme
url = https://github.com/dysmalpy/dysmalpy
author_email = shimizu@mpe.mpg.de
author = MPE IR/Sub-mm Group
requires_python = >=3.10.0

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Natural Language :: English

project_urls =
    Bug Tracker = https://github.com/dysmalpy/dysmalpy/issues
    Source Code = https://github.com/dysmalpy/dysmalpy


[options]
packages = find:
install_requires =
    numpy>=1.24.3
    scipy>=1.9.3
    matplotlib
    astropy>=5.3
    emcee>=3
    corner>=2.2.2
    cython
    dill>=0.3.7
    shapely>=2
    photutils>=1.8.0
    spectral-cube>=0.6.0
    radio-beam>=0.3.3
    h5py>=3.8.0
    pandas
    six
    ipython
    defaults
    dynesty
    pytest
    multiprocess


setup_requirements = 
    cython
    numpy


[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

